added 3d background snow

--- a/src/component/cardStyle.css
+++ b/src/component/cardStyle.css
@@ -3,7 +3,7 @@
 
 .wholeCard {
     border-radius: 10px;
-    background: hsl(217, 19%, 24%);
+    background: rgba(50, 58, 73, 0.8);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,52 +42,32 @@
     display: block;
 }
 
-
-
-
-
 .advice_body_container:after {
     content: '';
     position: absolute;
+    top: 50%;
+    left: 50%;
     margin: -35px 0 0 -35px;
-    width: 90%;
-    height: 90%;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
     opacity: 0;
 }
 
 .advice_body_container:after {
-    left: 13%;
-    top: 20%;
-    background: rgba(82, 255, 168, 0.2);
-}
-
-.button-click {
-    animation: fadeIn 1s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    animation-delay: 1;
+    background: hsl(150, 100%, 60%);
 }
 
 .advice_body_container.button-click:after {
-    transition: animation 1.5s ease;
-    animation: anim-effect-a 0.7s forwards;
+    animation: anim-effect-a 0.3s forwards;
+    animation-delay: 0.5s;
 }
 
-
-@keyframes anim-effect-a {
-    0% {
-        -webkit-transform: scale3d(0.3, 0.3, 1);
-    }
-
-    25%,
-    50% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-        -webkit-transform: scale3d(1.2, 1.2, 1);
-    }
+.button-click {
+    animation: bounce 1.2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-delay: 1;
 }
 
 .divider {
@@ -147,12 +127,25 @@
     transition: 0s;
 }
 
-.diceIconContainer.rotate {
-    -moz-transform: rotate(90deg);
-    -webkit-transform: rotate(90deg);
-    transform: rotate(-180deg);
-}
 
+
+
+
+@keyframes anim-effect-a {
+    0% {
+        -webkit-transform: scale3d(0.3, 0.3, 1);
+    }
+
+    25%,
+    50% {
+        opacity: 0.3;
+    }
+
+    100% {
+        opacity: 0;
+        -webkit-transform: scale3d(1.2, 1.2, 1);
+    }
+}
 
 button {
     background: transparent;
@@ -171,7 +164,7 @@ button:active {
 
 /*making the advice text bounce*/
 
-@keyframes fadeIn {
+@keyframes bounce {
 
 
 
